[details] UI fixes related to undelines and text-wrap pretty and balanced

--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,8 @@
 		font-family: 'bilo';
 		font-style: normal;
 		font-weight: 300;
-		src: url('/fonts/bilo-light.woff') format('woff'),
+		src:
+			url('/fonts/bilo-light.woff') format('woff'),
 			url('/fonts/bilo-light.woff2') format('woff2'),
 			url('/fonts/bilo-light.otf') format('opentype');
 		font-display: swap;
@@ -17,7 +18,8 @@
 		font-family: 'bilo';
 		font-style: normal;
 		font-weight: 400;
-		src: url('/fonts/bilo-regular.woff') format('woff'),
+		src:
+			url('/fonts/bilo-regular.woff') format('woff'),
 			url('/fonts/bilo-regular.woff2') format('woff2'),
 			url('/fonts/bilo-regular.otf') format('opentype');
 		font-display: swap;
@@ -27,7 +29,8 @@
 		font-family: 'bilo';
 		font-style: normal;
 		font-weight: 500;
-		src: url('/fonts/bilo-medium.woff') format('woff'),
+		src:
+			url('/fonts/bilo-medium.woff') format('woff'),
 			url('/fonts/bilo-medium.woff2') format('woff2'),
 			url('/fonts/bilo-medium.otf') format('opentype');
 		font-display: swap;
@@ -130,6 +133,14 @@
 
 	.beverage-list {
 		grid-template-columns: repeat(auto-fill, 160px);
+	}
+
+	.skip-ink-none {
+		text-decoration-skip-ink: none;
+	}
+
+	.skip-ink-auto {
+		text-decoration-skip-ink: auto;
 	}
 
 	@media screen(lg) {
